bin_PROGRAMS = \
	ping \
	pong

###############################################################################
# ping
###############################################################################
ping_SOURCES = \
	ping.c

ping_CFLAGS = \
	-Wall \
	-Wextra \
	-Wpedantic

ping_LDADD = \
	-lmsg

###############################################################################
# pong
###############################################################################
pong_SOURCES = \
	pong.c

pong_CFLAGS = \
	-Wall \
	-Wextra \
	-Wpedantic

pong_LDADD = \
	-lmsg
